--- a/config/database.yml
+++ b/config/database.yml
@@ -10,14 +10,42 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: <%= ENV['DATABASE_NAME'] || 'solo_customer_template_development' %>
+  primary:
+    <<: *default
+    database: <%= ENV['DATABASE_NAME'] || 'solo_customer_template_development' %>
+  queue:
+    <<: *default
+    database: <%= ENV['QUEUE_DATABASE_NAME'] || 'solo_customer_template_development_queue' %>
+    password: <%= ENV['QUEUE_DATABASE_PASSWORD'] %>
+    migrations_paths: db/queue_migrate
+  cache:
+    <<: *default
+    database: <%= ENV['CACHE_DATABASE_NAME'] || 'solo_customer_template_development_cache' %>
+    password: <%= ENV['CACHE_DATABASE_PASSWORD'] %>
+    migrations_paths: db/cache_migrate
 
 test:
-  <<: *default
-  database: <%= ENV['DATABASE_NAME'] || 'solo_customer_template_test' %>
+  primary:
+    <<: *default
+    database: <%= ENV['DATABASE_NAME'] || 'solo_customer_template_test' %>
 
 production:
-  <<: *default
-  database: <%= ENV['DATABASE_NAME'] || 'solo_customer_template_production' %>
-  url: <%= ENV['DATABASE_URL'] %>
+  primary:
+    <<: *default
+    database: <%= ENV['DATABASE_NAME'] || 'solo_customer_template_production' %>
+  queue:
+    <<: *default
+    database: <%= ENV['QUEUE_DATABASE_NAME'] || 'solo_customer_template_production_queue' %>
+    password: <%= ENV['QUEUE_DATABASE_PASSWORD'] %>
+    migrations_paths: db/queue_migrate
+  cable:
+    <<: *default
+    database: <%= ENV['CABLE_DATABASE_NAME'] || 'solo_customer_template_production_cable' %>
+    password: <%= ENV['CABLE_DATABASE_PASSWORD'] %>
+    migrations_paths: db/cable_migrate
+  cache:
+    <<: *default
+    database: <%= ENV['CACHE_DATABASE_NAME'] || 'solo_customer_template_production_cache' %>
+    password: <%= ENV['CACHE_DATABASE_PASSWORD'] %>
+    migrations_paths: db/cache_migrate
+
