--- a/package.json
+++ b/package.json
@@ -1,8 +1,27 @@
 {
   "dependencies": {
-    "@hotwired/turbo-rails": "^7.3.0"
+    "@hotwired/turbo-rails": "^7.3.0",
+    "@rails/actiontext": "^8.0.0",
+    "daisyui": "^4.7.3",
+    "leaflet": "^1.9.4",
+    "maplibre-gl": "^5.13.0",
+    "postcss": "^8.4.49",
+    "trix": "^2.1.15"
+  },
+  "engines": {
+    "node": "23.4.0",
+    "npm": "10.9.2"
   },
   "devDependencies": {
-    "daisyui": "^4.7.3"
-  }
+    "@playwright/test": "^1.56.1",
+    "@types/node": "^24.0.13"
+  },
+  "scripts": {
+    "build": "esbuild app/javascript/*.* --bundle --splitting --format=esm --outdir=app/assets/builds",
+    "analyze": "esbuild app/javascript/*.* --bundle --metafile=meta.json --analyze"
+  },
+  "sideEffects": [
+    "*.css",
+    "maplibre-gl/dist/maplibre-gl.css"
+  ]
 }
